--- a/src/_tpl_products-options.xhtml
+++ b/src/_tpl_products-options.xhtml
@@ -7,11 +7,11 @@
 		</div>
 		<div class="p-options__item">
 			<div class="p-options__inner">
-				<div class="p-options__group sorting-js order-asc">
+				<div class="p-options__group order-asc">
 					<small>Сортировать:</small>
-					<ul class="p-sorting sorting-thumbs-js">
-						<li class="active"><span>По цене</span><i class="arr">&nbsp;</i></li>
-						<li class=""><span>По акции</span><i class="arr">&nbsp;</i></li>
+					<ul class="p-sorting">
+						<li class="active"><a href="#"><span>По цене</span><i class="arr">&nbsp;</i></a></li>
+						<li class=""><a href="#"><span>По акции</span><i class="arr">&nbsp;</i></a></li>
 					</ul>
 					<select name="sort">
 						<option value="1" selected="selected">Сортировка по возрастанию</option>
