--- a/src/__automatic-basket-01.html
+++ b/src/__automatic-basket-01.html
@@ -65,7 +65,7 @@
 									</div>
 									<div class="product-basket__footer">
 										<div class="arr-wrap">
-											<a href="automatic-catalog.html" class="btn-outline"><i>&nbsp;</i><span>оформить заказ</span></a>
+											<a href="automatic-basket-02.html" class="btn-outline"><i>&nbsp;</i><span>Оформить заказ</span></a>
 											<a href="automatic-catalog.html" class="btn-outline-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
 										</div>
 									</div>
