--- a/src/all-pages.html
+++ b/src/all-pages.html
@@ -724,8 +724,11 @@
 										<li><a href="automatic-card.html"><span>Карточка товара</span></a></li>
 										<li><a href="automatic-news.html"><span>Список новостей</span></a></li>
 										<li><a href="automatic-news-inner.html"><span>Новостная текстовая</span></a></li>
-										<li><a href="automatic-basket.html"><span>Корзина</span></a></li>
+										<li><a href="automatic-basket-01.html"><span>Корзина (Шаг 1)</span></a></li>
+										<li><a href="automatic-basket-02.html"><span>Корзина (Шаг 2)</span></a></li>
+										<li><a href="automatic-basket-03.html"><span>Корзина (Шаг 3)</span></a></li>
 										<li><a href="automatic-personal.html"><span>Личный кабинет</span></a></li>
+										<li><a href="automatic-search.html"><span>Результаты поиска</span></a></li>
 									</ul>
 									<h2><span class="mark">Общие</span></h2>
 									<ul>
