--- a/src/_layout_header--ea.xhtml
+++ b/src/_layout_header--ea.xhtml
@@ -95,6 +95,25 @@
 										<input type="submit" value="">
 									</div>
 								</div>
+								<div class="search-form__results">
+									<div class="search-form__results__holder">
+										<ul class="groups-list">
+											<li><a href="#"><span>Инструмент</span> 802</a></li>
+											<li><a href="#"><span>Кабельно-проводниковая продукция и кабеленесущие системы</span> 12</a></li>
+											<li><a href="#"><span>Новости</span> 1215</a></li>
+										</ul>
+										<!--products-->
+										<div class="products">
+											<section class="products__list">
+												@@loop("_tpl_products-items.tpl", "includes-json/products-items--results.json")
+											</section>
+										</div>
+										<!--products end-->
+									</div>
+									<div class="search-form__results__footer">
+										<a href="#" class="btn-outline full-width"><span>Показать все (589)</span></a>
+									</div>
+								</div>
 							</form>
 						</div>
 						<!--search form end-->
