--- a/src/__automatic-basket-02.html
+++ b/src/__automatic-basket-02.html
@@ -63,7 +63,7 @@
 													</div>
 													<div class="input-group add-field-group-js field-effects-js">
 														<div class="input-wrap light-form">
-															<div class="remove-field remove-field-js">Удалить</div>
+															<div class="remove-field remove-field-js" title="Удалить номер телефона">Удалить</div>
 															<div class="label-holder">
 																<label for="ordering-phone-field">Телефон</label>
 															</div>
@@ -75,7 +75,7 @@
 														<span>Добавить телефон</span>
 														<script type="text/template" data-template="field-tpl">
 															<div class="input-wrap light-form">
-																<div class="remove-field remove-field-js">Удалить</div>
+																<div class="remove-field remove-field-js" title="Удалить номер телефона">Удалить</div>
 																<div class="label-holder">
 																	<label>Телефон</label>
 																</div>
